# XMLSerializable-portable

./: .gitignore  CMakeLists.txt  LICENSE  Libxml2Driver.cpp  PortableSAX.h  README.md  SAXContentHandlerImpl.h  SAXObjectContentHandlerImpl.cpp  SAXObjectContentHandlerImpl.h  XMLSerializable.cpp  XSBase.h  XSInternal.h  XSPlatform.h
